--- a/assets-registerDomain/css/style.css
+++ b/assets-registerDomain/css/style.css
@@ -850,4 +850,59 @@ footer,.footer-section{
     flex: 1 1 20%;
   }
 }
+.main_logo{
+  padding: 2rem 0;
+}
 
+.slider{  
+  width: 100%;
+  /* border: 1px solid red; */
+  height: var(--height);
+  overflow: hidden;
+  mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
+}
+.slider .list{
+  display: flex;
+  width: 100%;
+  min-width: calc(var(--width) * var(--qntity));
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  position: relative;
+}
+
+.slider .list .item{
+  width: var(--width);
+  height: var(--height);
+  display: flex;
+  align-items: center;
+  position: absolute;
+  left: 105%;
+  top: 10%;
+  transition: filter 0.5s;
+  animation: autoRun 20s linear infinite;
+  animation-delay: calc((20s / var(--qntity)) * (calc(var(--position) - 1)));
+ 
+}
+.slider .list .item img{
+  width: 100%;  
+  /* border: 2px solid rgb(71, 162, 6); */
+ }
+.slider:hover .item{
+  animation-play-state: paused !important;
+  filter: grayscale(1);
+}
+.slider .item:hover{
+  filter: grayscale(0);
+}
+
+
+ @keyframes  autoRun {
+   
+    from{
+        left: 100%;
+    }
+    to{
+        left: calc(var(--width) * -1);
+    }
+ }
