--- a/assets-registerDomain/css/style.css
+++ b/assets-registerDomain/css/style.css
@@ -850,9 +850,9 @@ footer,.footer-section{
     flex: 1 1 20%;
   }
 }
-.main_logo{
+/* .main_logo{
   padding: 2rem 0;
-}
+} */
 
 .slider{  
   width: 100%;
@@ -880,8 +880,8 @@ footer,.footer-section{
   left: 105%;
   top: 10%;
   transition: filter 0.5s;
-  animation: autoRun 20s linear infinite;
-  animation-delay: calc((20s / var(--qntity)) * (calc(var(--position) - 1)));
+  animation: autoRun 12s linear infinite;
+  animation-delay: calc((15s / var(--qntity)) * (calc(var(--position) - 1)));
  
 }
 .slider .list .item img{
@@ -906,3 +906,49 @@ footer,.footer-section{
         left: calc(var(--width) * -1);
     }
  }
+
+ .box-model{
+  padding: 20px 0;
+  width: 100%;
+  height: 100%;
+} 
+.box-model .models{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 15px;
+  align-items: center;
+  justify-items: center; 
+  text-align: center;
+}
+
+@media screen and (max-width: 1023px) {
+  .box-model .models{
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 676px) {
+  .box-model .models{
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, 1fr);
+  }
+}
+/* .box-model .models >.item{
+  grid-row: var(--r);
+  grid-column: var(--c);
+} */
+.box-model .models .item {
+  width: 100%;  
+}
+.models .item img{
+  width: 180px;
+}
+.box-model .models .item{
+  transition: filter 0.5s;
+  cursor: pointer;
+}
+.box-model .models:hover .item:not(:hover){  
+  filter: grayscale(1);
+  cursor: pointer;
+}
