--- a/assets-registerDomain/css/style.css
+++ b/assets-registerDomain/css/style.css
@@ -923,19 +923,26 @@ footer,.footer-section{
     }
  }
 
+
+ /* grid container */
+
+
  .box-model{
   padding: 20px 0;
   width: 100%;
   height: 100%;
-} 
+  /* display: none; */
+ } 
+
 .box-model .models{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr 1fr 1fr;
-  gap: 15px;
+  gap: 50px;
   align-items: center;
   justify-items: center; 
   text-align: center;
+ 
 }
 
 @media screen and (max-width: 1023px) {
@@ -956,7 +963,7 @@ footer,.footer-section{
 } */
 .box-model .models .item {
   width: 100%;  
-  animation:moveUpDown 4s ease 1s infinite alternate;
+  /* animation:moveUpDown 4s ease 1s infinite alternate; */
 }
 .models .item img{
   width: 180px;
@@ -974,17 +981,38 @@ footer,.footer-section{
    padding: 2rem 0 !important;
   }
 }
+
+ .logo-hide_button{
+  position:fixed;
+  top:50%;
+  left:50%;
+  width: 100%;
+  height: 100vh;
+  z-index: 4000;
+  transform: translate(-50%, -50%);
+  animation:moveUpDown 5s ease 1s 4 ;
+  /* animation-delay: var(10s/10)*(var(--c) - 1); */
+  overflow: hidden;
+ }
+ .models .item img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  
+ }
 @keyframes moveUpDown {
   0%{
-    transform: translateY(0) scale(0.8);
+   top: 100%;
+   opacity: 0.6;
+   transform:  translate(-50%, -50%) scale(0.5);
   }
-  40%{
-    transform: translateY(-50px) scale(1.1);
-  }
-  80%{
-    transform: translateY(50px) scale(1);
+  60%{
+    opacity: 0.9;
+    transform:   translate(-50%, -50%) scale(1);
   }
   100%{
-    transform: translateY(0) scale(0.9);
+   top: -100%;
+   opacity: 1;
+   transform: translate(-50%, -50%) scale(1.2);
   }
 }
