--- a/assets-registerDomain/css/style.css
+++ b/assets-registerDomain/css/style.css
@@ -946,7 +946,7 @@ footer,.footer-section{
   position: fixed;
   top: 50%;
   left: 50%;
-  visibility: hidden;
+  /* visibility: hidden; */
   transform: translate(-50%, -50%);
   transition: transform 0.5s;
   z-index: 5555;
@@ -965,6 +965,8 @@ footer,.footer-section{
   align-self: center;
   background-color: transparent;
   mix-blend-mode: multiply; 
+  border-radius: 10px 7px; 
+  filter: drop-shadow( 0 0 10px rgba(0,0,0,0.1));
 }
  .models.visibles{
   visibility: visible;
