--- a/assets-registerDomain/css/style.css
+++ b/assets-registerDomain/css/style.css
@@ -957,7 +957,7 @@ footer,.footer-section{
 }
 .models.visibles{
   visibility: visible;
-  animation:moveUpDown 30s linear  infinite ;
+  animation:moveUpDown 25s ease-in-out infinite forwards;
 }
 .models .item img{
   display: grid;
@@ -966,45 +966,10 @@ footer,.footer-section{
   background-color: transparent;
   mix-blend-mode: multiply; 
   border-radius: 10px 7px; 
-  max-width: 60%;
+  max-width: 50%;
   filter: drop-shadow( 0 0 10px rgba(0,0,0,0.1));
-  animation: imagRotate 3.5s linear 1s infinite;
 }
-@keyframes imagRotate {
-  0%{
-    transform: translateX(0) translateY(0) rotate(0deg) scale(1);
-  }
-  10%{
-    transform: translateX(3px) translateY(3px) rotate(3deg) scale(1.05);
-  }
-  20%{
-    transform: translateX(-3px) translateY(-3px) rotate(-3deg) scale(1.05);
-  }
-  30%{
-    transform: translateX(2px) translateY(2px) rotate(2deg) scale(1);
-  }
-  40%{
-    transform: translateX(-2px) translateY(-2px) rotate(-2deg) scale(1);
-  }
-  50%{
-    transform: translateX(3px) translateY(3px) rotate(3deg) scale(1.05);
-  }
-  60%{
-    transform: translateX(-3px) translateY(-3px) rotate(-3deg) scale(1.05);
-  }
-  70%{
-    transform: translateX(2px) translateY(2px) rotate(2deg) scale(1);
-  }
-  80%{
-    transform: translateX(-2px) translateY(-2px) rotate(-2deg) scale(1);
-  }
-  90%{
-    transform: translateX(3px) translateY(3px) rotate(3deg) scale(1.05);
-  }
-  100%{
-    transform: translateX(0) translateY(0) rotate(0deg) scale(1);
-  }
-}
+
  .models.visibles{
   visibility: visible;
  }
@@ -1061,7 +1026,7 @@ footer,.footer-section{
    opacity: 0;
    transform: translate(-50%, -50%) scale(0.5) ;
   }
-  10%{
+  20%{
     opacity:1;
     transform: translate(-50%, -50%) scale(0.8) ;
   }
