--- a/assets-registerDomain/css/style.css
+++ b/assets-registerDomain/css/style.css
@@ -959,16 +959,27 @@ footer,.footer-section{
   visibility: visible;
   animation:moveUpDown 25s ease-in-out infinite forwards;
 }
+.models .item{
+  width: 15rem;
+  height: 15rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+  filter: drop-shadow( 0 0 10px rgba(0,0,0,0.1));
+  overflow: hidden;
+}
 .models .item img{
   display: grid;
   justify-self: center;
   align-self: center; 
-  border-radius: 10px 7px; 
-  max-width: 50%; 
+  /* border-radius: 10px 7px;  */
+  max-width: 80%; 
   object-fit: cover;
-  padding: 10px 12px;
+  padding: 13px ;
   background-color: rgb(255, 255, 255);
-  filter: drop-shadow( 0 0 10px rgba(0,0,0,0.1));
+  /* filter: drop-shadow( 0 0 10px rgba(0,0,0,0.1)); */
 }
 
  .models.visibles{
@@ -1005,8 +1016,8 @@ footer,.footer-section{
   .models{
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    column-gap: 40px;
-    left: 60%;
+    column-gap: 20px;
+    left: 50%;
     
   }
   .models .item img{
@@ -1029,11 +1040,11 @@ footer,.footer-section{
   }
   20%{
     opacity:1;
-    transform: translate(-50%, -50%) scale(0.8) ;
+    transform: translate(-50%, -50%) scale(0.9) ;
   }
   100%{
-   top: -100%;
+   top: -120%;
    opacity: 1;
-   transform: translate(-50%, -50%) scale(1.1) ;
+   transform: translate(-50%, -50%) scale(1) ;
   }
 }
